# android-rtk-robot-kalman

./: .gitignore  CHANGELOG.md  README.md  jitpack.yml  settings.gradle.kts
.artifacts/4af5ee75-ea07-4d83-b4c6-89cc944d8221/: task.artifact.md
android/: settings.gradle.kts
android-rtk-robot-kalman/: build.gradle.kts
android-rtk-robot-kalman/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android-rtk-robot-kalman/src/main/java/com/mohammadnouri5700/rtkrobotkalman/: RtkRobotEngine.kt
android-rtk-robot-kalman/src/main/keepRules/: rules.keep
android/.artifacts/4af5ee75-ea07-4d83-b4c6-89cc944d8221/: implementation_plan.artifact.md  walkthrough.artifact.md
android/android-rtk-robot-kalman/: build.gradle.kts  consumer-rules.pro
android/android-rtk-robot-kalman/src/main/cpp/: CMakeLists.txt
android/android-rtk-robot-kalman/src/main/java/com/mohammadnouri5700/rtkrobotkalman/: RtkRobotEngine.kt
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/rtklib_localization/: ExampleInstrumentedTest.kt  LocalizationEngineInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/example/rtklib_localization/: LocalizationEngine.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/rtklib_localization/: ExampleUnitTest.kt  LocalizationEngineTest.kt
android/gradle/: libs.versions.toml
core/include/: measurement_types.hpp  robot_localization_ekf.hpp  rtklib_interface.hpp  sensor_fusion.hpp
core/src/: robot_localization_ekf.cpp  rtklib_interface.cpp  sensor_fusion.cpp
core/test/: sensor_fusion_test.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
